[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameComponents/GameBalls/SpawningArea/game_ball_spawning_area.gd" type="Script" id=1]

[node name="GameBallSpawningArea" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerOneSpawnArea" type="ColorRect" parent="."]
margin_left = 250.0
margin_top = 250.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0.501961, 0.501961, 1, 0.501961 )

[node name="PlayerTwoSpawnArea" type="ColorRect" parent="."]
margin_left = 980.0
margin_top = 250.0
margin_right = 1030.0
margin_bottom = 300.0
rect_min_size = Vector2( 50, 50 )
color = Color( 1, 0.501961, 0.501961, 0.501961 )

[node name="GameBalls" type="Node2D" parent="."]
